--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ body {
 li,p,h1,h2,h3,h4,h5,h6 {
 	font-family: 'RaisonneDemiBold', Helvetica;
   color: #183150;
-  fill: #183150;
   line-height: 150%;
 }
 
@@ -46,6 +45,14 @@ h2 {
   background-color: #ffdcb4;
 }
 
+.cream-text {
+  color: #ffdcb4;
+}
+
+.green-bg {
+  background-color: #3b5f33;
+}
+
 .title {
   font-size: 72px;
 }
@@ -59,4 +66,8 @@ h2 {
   background: url(../images/underline-jagged.svg) repeat-x;
   background-position: -50px 100%;
   padding-bottom: 1px;
+}
+
+.center {
+  text-align: center;
 }
