--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,13 @@ body {
 }
 
 li,p,h1,h2,h3,h4,h5,h6 {
-	font-family: 'RaisonneDemiBold', Helvetica;
+	font-family: 'FalafelGrotesque', Helvetica;
   color: #183150;
   line-height: 150%;
+}
+
+h1 {
+  font-family: 'RaisonneDemiBold';
 }
 
 h2 {
@@ -70,4 +74,127 @@ h2 {
 
 .center {
   text-align: center;
+}
+
+/* Calendar */
+ul {list-style-type: none;}
+body {font-family: Verdana, sans-serif;}
+
+/* Month header */
+.month {
+    padding: 70px 25px;
+    width: 100%;
+    text-align: center;
+    font-family: 'RaisonneDemiBold';
+}
+
+/* Month list */
+.month ul {
+    margin: 0;
+    padding: 0;
+}
+
+.month ul li {
+    font-size: 48px;
+    letter-spacing: 3px;
+}
+
+/* Previous button inside month header */
+.month .prev {
+    float: left;
+    padding-top: 10px;
+}
+
+/* Next button */
+.month .next {
+    float: right;
+    padding-top: 10px;
+}
+
+/* Weekdays (Mon-Sun) */
+.weekdays {
+    margin: 0;
+    padding: 10px 0;
+    background-color:#ddd;
+}
+
+.weekdays li {
+    display: inline-block;
+    width: 13.6%;
+    color: #666;
+    text-align: center;
+}
+
+/* Days (1-31) */
+.days {
+    padding: 10px 0;
+    background: #eee;
+    margin: 0;
+}
+
+.days li {
+    list-style-type: none;
+    display: inline-block;
+    width: 13.6%;
+    text-align: center;
+    margin-bottom: 50px;
+    font-size:48px;
+    color: #777;
+}
+
+/* Highlight the "current" day */
+.days li .active {
+    padding: 5px;
+    background: url(../images/underline-jagged.svg) repeat-x;
+    background-position: -50px 100%;
+    padding-bottom: 1px;
+}
+
+.month-title:before{
+  content: 'January';
+  animation-name: month-anim;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes month-anim {
+  0% {font-size:100%; opacity:1; content: "January"}
+  /*4% {font-size:100%; opacity:0;} */
+
+  8% {font-size:100%; opacity:1; content: "February"}
+  /*12% {font-size:100%; opacity:0;} */
+
+  16% {font-size:100%; opacity:1; content: "March"}
+  /*20% {font-size:100%; opacity:0;} */
+
+  24% {font-size:100%; opacity:1; content: "April"}
+  /*28% {font-size:100%; opacity:0;} */
+  
+  32% {font-size:100%; opacity:1; content: "May"}
+  /*36% {font-size:100%; opacity:0;} */
+  
+  40% {font-size:100%; opacity:1; content: "June"}
+  /*44% {font-size:100%; opacity:0;} */
+  
+  48% {font-size:100%; opacity:1; content: "Sol"}
+  /*52% {font-size:100%; opacity:0;} */
+  
+  56% {font-size:100%; opacity:1; content: "July"}
+  /*60% {font-size:100%; opacity:0;} */
+  
+  64% {font-size:100%; opacity:1; content: "August"}
+  /*68% {font-size:100%; opacity:0;} */
+  
+  72% {font-size:100%; opacity:1; content: "September"}
+  /*76% {font-size:100%; opacity:0;} */
+  
+  80% {font-size:100%; opacity:1; content: "October"}
+  /*84% {font-size:100%; opacity:0;} */
+  
+  88% {font-size:100%; opacity:1; content: "November"}
+  /*92% {font-size:100%; opacity:0;} */
+  
+  96% {font-size:100%; opacity:1; content: "December"}
+  /*100% {font-size:100%; opacity:0;} */
+
 }
